--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ a {
 nav {
     background-color: #181818;
     padding: 1em !important;
-    margin-bottom: 2em;
+    margin-bottom: 1em;
 }
     nav .navbar-brand, nav .navbar-text {
         color: #939395;
@@ -66,13 +66,11 @@ h1 {
 
 
 
-#date, #location {
-    font-weight: 100;
-    font-size: 20px;
-    text-align: right;
+#date {
+    font-weight: 600;
+    font-size: 18px;
 }
 #location {
     font-weight: 100;
-    font-size: 18px;
-    text-align: right;
+    font-size: 16px;
 }
